--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Cedric Fortuin",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^4.4.0",
     "path": "^0.12.7",
     "url": "^0.11.0"
